<resources>
    <string name="app_name">Covid AUT Tracker</string>
    <string name="mostAffectedCountries">Most Affected Countries</string>
    <string name="leastAffectedCountries">Least Affected Countries</string>
    <string name="worldData">World Statistics</string>
    <string name="indiaData">India Statistics</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title">Covid 19</string>
    <string name="subTitle">Unite against COVID-19</string>

    <string name="heading1">Total Cases Vs Days(Since Jan\' 2020)</string>
    <string name="heading2">Total Deaths Vs Days(Since Jan\' 2020)</string>
    <string name="heading3">Today\'s Stats</string>


</resources>
